examples/test/testpolicy16846.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16846
  namespace: namespace439
spec:
  podSelector:
    matchLabels:
      key0: value26
      key4: value44
      key37: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key10: value9
          key31: value17
          key19: value22
      podSelector:
        matchLabels:
          key9: value28
          key14: value36
          key11: value20
